[package]
name = "r_log"
version = "0.3.5"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "A simple reliable logger for rust with multiple available logging levels."
license  = "MIT OR Apache-2.0"
repository = "https://github.com/nraynes/r_log"
keywords = ["log", "logging", "logger", "rust", "tools"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] } 
